--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/dist/module/index.js",
+    "@supabase/gotrue-js": "https://cdn.jsdelivr.net/npm/@supabase/gotrue-js@2.64.2/dist/module/index.js",
+    "@supabase/auth-js": "https://cdn.jsdelivr.net/npm/@supabase/auth-js@2.3.2/dist/module/index.js",
+    "@supabase/functions-js": "https://cdn.jsdelivr.net/npm/@supabase/functions-js@2.4.1/dist/module/index.js",
+    "@supabase/postgrest-js": "https://cdn.jsdelivr.net/npm/@supabase/postgrest-js@1.15.5/dist/module/index.js",
+    "@supabase/realtime-js": "https://cdn.jsdelivr.net/npm/@supabase/realtime-js@2.10.0/dist/module/index.js",
+    "@supabase/storage-js": "https://cdn.jsdelivr.net/npm/@supabase/storage-js@2.6.0/dist/module/index.js"
   }
 }
 </script>
